...
                        <connections>
                            <outlet property="dataSource" destination="0Lb-dw-qn4" id="pfE-Fz-506"/>
                            <outlet property="delegate" destination="0Lb-dw-qn4" id="fuc-YT-iz0"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Select Borough" id="HaH-cG-nIW">
                        <barButtonItem key="backBarButtonItem" title="Back" id="U7o-WG-u4c"/>
                    </navigationItem>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="mmw-0v-zBp" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-172" y="36.945812807881772"/>
        </scene>
...
