//
//  NYC_HS_SATUITests.swift
//  NYC HS SATUITests
//
//  Created by C4Q on 3/9/18.
//  Copyright © 2018 basedOnTy. All rights reserved.
//

import XCTest

class NYC_HS_SATUITests: XCTestCase {
        
    override func setUp() {
        super.setUp()
        
        // Put setup code here. This method is called before the invocation of each test method in the class.
        
        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false
        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        XCUIApplication().launch()

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }
    
    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
        super.tearDown()
    }
    
    func testSelectBoro() {
        let app = XCUIApplication()
        let tablesQuery = app.tables
        tablesQuery/*@START_MENU_TOKEN@*/.staticTexts["Manhattan"]/*[[".cells.staticTexts[\"Manhattan\"]",".staticTexts[\"Manhattan\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        app.navigationBars["Manhattan"].buttons["Back"].tap()
        tablesQuery/*@START_MENU_TOKEN@*/.staticTexts["Brooklyn"]/*[[".cells.staticTexts[\"Brooklyn\"]",".staticTexts[\"Brooklyn\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        app.navigationBars["Brooklyn"].buttons["Back"].tap()
        tablesQuery/*@START_MENU_TOKEN@*/.staticTexts["Queens"]/*[[".cells.staticTexts[\"Queens\"]",".staticTexts[\"Queens\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        app.navigationBars["Queens"].buttons["Back"].tap()
        tablesQuery/*@START_MENU_TOKEN@*/.staticTexts["Bronx"]/*[[".cells.staticTexts[\"Bronx\"]",".staticTexts[\"Bronx\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        app.navigationBars["Bronx"].buttons["Back"].tap()
        tablesQuery/*@START_MENU_TOKEN@*/.cells.containing(.image, identifier:"Staten Island")/*[[".cells.containing(.staticText, identifier:\"Staten Island\")",".cells.containing(.image, identifier:\"Staten Island\")"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.children(matching: .other).element(boundBy: 0).tap()
        app.navigationBars["Staten Island"].buttons["Back"].tap()
    }
}
